@@ -1197,5 +1197,6 @@ cbpSwitchGunRackSmallHelper,blocks,Container,,,cbp Switch Gun Rack Small Helper,
 cbpSwitchGunRackSmall,blocks,Container,,,cbp Switch Gun Rack Small,,
 cbpSwitchGunRackLargeHelper,blocks,Container,,,cbp Switch Gun Rack Large Helper,,
 cbpSwitchGunRackLarge,blocks,Container,,,cbp Switch Gun Rack Large,,
+cbpPillar50Plate,shapes,Block,,,CBP Pillar 50 Plate,,
 loadingCustomBlocksPack,UI,Loading Screen,x,,The Custom Block Pack contains XML definitions for custom blocks used by multiple POI developers.,,,,,,,,,,,,,
 loadingCustomBlocksPack_title,UI,Loading Screen,x,,Custom Block Pack,,,,,,,, 
