@@ -1,5 +1,8 @@
 CHANGE LOG / RELEASE NOTES: (Newest to Oldest)
 
+A21.2.001.0053 :
+* Added pillar 50 offset plate shape thing.
+
 A21.2.001.0052 :
 * Removed cbponfire, cbponfireoffset because of errors.
 
